# OpenGL-Tutorial

./: .gitignore  README  README.md
GLTutorial/: CMakeLists.txt  GLTutorial.sln
GLTutorial/GLTutorial/: GLTutorial.vcxproj  GLTutorial.vcxproj.filters  GLUtils.cpp  GLUtils.h  main.cpp  tutorial_drawing.cpp
GLTutorial/libs/glfw3/: glfw3.lib
GLTutorial/src/: GLUtils.cpp  GLUtils.h  basic_fragment.glsl  basic_vertex.glsl  tutorial_drawing.cpp
